2006-10-06 Magnus Hagdorn
 * setup.py: bump version
 * update NEWS

2006-10-04 Magnus Hagdorn
 * CF_IOmisc.py: add expontential temperature EIS forcing
 * CF_options.py: add options to handle expontential temperature EIS forcing
 * plotEISvar.py: use new temperature forcing
 * plot_extent.py: plot key if we are plotting more than one file

2005-10-03 Magnus Hagdorn
 * CF_options.py: improve help message somewhat
 * plotCFstats.py: add option to plot average ice thickness
 * plotStreams.py: we can plot more than 1 file, we can also plot
   average basal velos

2005-09-12 Magnus Hagdorn
 * 2Dsplinemodule.c: pygsl wrapper for splines is badly leaking memory
   and doesn't work on x86_64. Resurrected old implementation. It could 
   be improved vastly, but hey it works
 * setup.py: added function for looking for libraries, added extension
   2Dsplinemodule
 * __init__.py: added 2Dsplinemodule
 * CF_loadfile.py: use TwoDspline for extracting RSL
 * plotRSL.py: minor improvements

2005-08-17 Stewart Jamieson
 * a2c.py: fix origins of velo grid

2005-08-15 Magnus Hagdorn
 * litho_temp.cpt: new colourmap for temperatures of lithosphere
 * CF_colourmap.py: hooked up litho_temp.cpt
 * setup.py: ditto
 * CF_options.py: new options for specifying x and y axis, split up variable
   options into two methods
 * plotSpot.py: use options mentioned above and handle lithoz
 * CF_area.py: split up method image into two methods
 * CF_loadfile.py: add lithoz to check for 3Dness
 * CF_profile.py: add 2D profile extraction for litho_temp
 * CF_profilearea.py: option for plotting 2D litho_temp profile
 * plotProfile.py: we can also plot multiple times
 
2005-07-07 Magnus Hagdorn
 * CF_IOrsl.py: add methods to return min and max time
 * CF_file.py: fix small bug
 * CF_loadfile.py: fix bug in time method, add methods to get RSL residuals
   and 2D histogram of RSL residuals
 * CF_rsl.py: new class for plotting temporal histogram of RSL residuals